--- a/config.json
+++ b/config.json
@@ -8,7 +8,16 @@
         "TYPO3.Eel:git@github.com:neos/eel.git",
         "TYPO3.Flow:git@github.com:neos/flow.git",
         "TYPO3.Fluid:git@github.com:neos/fluid.git",
-        "TYPO3.Kickstart:git@github.com:neos/kickstart.git"
+        "TYPO3.Kickstart:git@github.com:neos/kickstart.git",
+        "Neos.Utility.Arrays:git@github.com:neos/utility-arrays.git",
+        "Neos.Utility.Files:git@github.com:neos/utility-files.git",
+        "Neos.Utility.Lock:git@github.com:neos/utility-lock.git",
+        "Neos.Utility.MediaTypes:git@github.com:neos/utility-mediatypes.git",
+        "Neos.Utility.ObjectHandling:git@github.com:neos/utility-objecthandling.git",
+        "Neos.Utility.OpcodeCache:git@github.com:neos/utility-opcodecache.git",
+        "Neos.Utility.Pdo:git@github.com:neos/utility-pdo.git",
+        "Neos.Utility.Schema:git@github.com:neos/utility-schema.git",
+        "Neos.Utility.Unicode:git@github.com:neos/utility-unicode.git"
       ]
     },
     "Neos": {
