--- a/config.json
+++ b/config.json
@@ -18,9 +18,7 @@
         "Neos.Utility.OpcodeCache:git@github.com:neos/utility-opcodecache.git",
         "Neos.Utility.Pdo:git@github.com:neos/utility-pdo.git",
         "Neos.Utility.Schema:git@github.com:neos/utility-schema.git",
-        "Neos.Utility.Unicode:git@github.com:neos/utility-unicode.git",
-        "Neos.RedirectHandler:git@github.com:neos/redirecthandler.git",
-        "Neos.RedirectHandler.DatabaseStorage:git@github.com:neos/redirecthandler-databasestorage.git"
+        "Neos.Utility.Unicode:git@github.com:neos/utility-unicode.git"
       ]
     },
     "Neos": {
@@ -33,8 +31,7 @@
         "TYPO3.Neos.Kickstarter:git@github.com:neos/neos-kickstarter.git",
         "TYPO3.Neos.NodeTypes:git@github.com:neos/neos-nodetypes.git",
         "TYPO3.TYPO3CR:git@github.com:neos/typo3cr.git",
-        "TYPO3.TypoScript:git@github.com:neos/typoscript.git",
-        "Neos.RedirectHandler.NeosAdapter:git@github.com:neos/redirecthandler-neosadapter.git"
+        "TYPO3.TypoScript:git@github.com:neos/typoscript.git"
       ]
     }
   }
