--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "projects": {
     "Flow": {
       "url": "https://github.com/neos/flow-development-collection",
-      "allowedRefsPattern": "/^refs\\/(tags|heads)\\/(FLOW3-)?([0-9]+\\.[0-9]+(\\.[0-9]+)?|master)$/",
+      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:FLOW3-)?(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?|master)$/",
       "splits": [
         "TYPO3.Eel:git@github.com:neos/eel.git",
         "TYPO3.Flow:git@github.com:neos/flow.git",
