TASK: Allow alpha and beta refs for Neos

--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
     },
     "Neos": {
       "url": "https://github.com/neos/neos-development-collection",
-      "allowedRefsPattern": "/^refs\\/(tags|heads)\\/([0-9]+\\.[0-9]+(\\.[0-9]+)?|master)$/",
+      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?|master)$/",
       "splits": [
         "Neos.Diff:git@github.com:neos/diff.git",
         "TYPO3.Media:git@github.com:neos/media.git",
