--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
         "Neos.Eel:git@github.com:neos/eel.git",
         "Neos.Flow:git@github.com:neos/flow.git",
         "Neos.FluidAdaptor:git@github.com:neos/fluidadaptor.git",
-        "Neos.Kickstart:git@github.com:neos/kickstart.git"
+        "Neos.Kickstarter:git@github.com:neos/kickstart.git"
       ]
     },
     "Neos": {
