--- a/config.json
+++ b/config.json
@@ -21,6 +21,7 @@
         "Neos.Utility.Pdo:git@github.com:neos/utility-pdo.git",
         "Neos.Utility.Schema:git@github.com:neos/utility-schema.git",
         "Neos.Utility.Unicode:git@github.com:neos/utility-unicode.git",
+        "Neos.Flow.Log:git@github.com:neos/flow-log.git",
         "Neos.Eel:git@github.com:neos/eel.git",
         "Neos.Flow:git@github.com:neos/flow.git",
         "Neos.FluidAdaptor:git@github.com:neos/fluidadaptor.git",
