--- a/config.json
+++ b/config.json
@@ -53,7 +53,8 @@
         "Neos.NodeTypes.Html:git@github.com:neos/nodetypes-html.git",
         "Neos.NodeTypes.Navigation:git@github.com:neos/nodetypes-navigation.git",
         "Neos.ContentRepository:git@github.com:neos/typo3cr.git",
-        "Neos.Fusion:git@github.com:neos/typoscript.git"
+        "Neos.Fusion:git@github.com:neos/typoscript.git",
+        "Neos.Fusion:git@github.com:neos/fusion.git"
       ]
     }
   }
