--- a/config.json
+++ b/config.json
@@ -3,12 +3,8 @@
   "projects": {
     "Flow": {
       "url": "https://github.com/neos/flow-development-collection",
-      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:FLOW3-)?(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?|master)$/",
+      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?|master)$/",
       "splits": [
-        "TYPO3.Eel:git@github.com:neos/eel.git",
-        "TYPO3.Flow:git@github.com:neos/flow.git",
-        "TYPO3.Fluid:git@github.com:neos/fluid.git",
-        "TYPO3.Kickstart:git@github.com:neos/kickstart.git",
         "Neos.Cache:git@github.com:neos/cache.git",
         "Neos.Error.Messages:git@github.com:neos/error-messages.git",
         "Neos.FluidAdaptor:git@github.com:neos/fluidadaptor.git",
@@ -34,12 +30,6 @@
       "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?|master)$/",
       "splits": [
         "Neos.Diff:git@github.com:neos/diff.git",
-        "TYPO3.Media:git@github.com:neos/media.git",
-        "TYPO3.Neos:git@github.com:neos/neos.git",
-        "TYPO3.Neos.Kickstarter:git@github.com:neos/neos-kickstarter.git",
-        "TYPO3.Neos.NodeTypes:git@github.com:neos/neos-nodetypes.git",
-        "TYPO3.TYPO3CR:git@github.com:neos/typo3cr.git",
-        "TYPO3.TypoScript:git@github.com:neos/typoscript.git",
         "Neos.Media:git@github.com:neos/media.git",
         "Neos.Media.Browser:git@github.com:neos/media-browser.git",
         "Neos.Neos:git@github.com:neos/neos.git",
