--- a/config.json
+++ b/config.json
@@ -42,9 +42,7 @@
         "Neos.NodeTypes.Form:git@github.com:neos/nodetypes-form.git",
         "Neos.NodeTypes.Html:git@github.com:neos/nodetypes-html.git",
         "Neos.NodeTypes.Navigation:git@github.com:neos/nodetypes-navigation.git",
-        "Neos.ContentRepository:git@github.com:neos/typo3cr.git",
-        "Neos.ContentRepository:git@github.com:neos/contentrepository.git",
-        "Neos.Fusion:git@github.com:neos/typoscript.git",
+        "Neos.ContentRepository:git@github.com:neos/content-repository.git",
         "Neos.Fusion:git@github.com:neos/fusion.git"
       ]
     }
