--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "projects": {
     "Flow": {
       "url": "https://github.com/neos/flow-development-collection",
-      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?|master|main)$/",
+      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?)$/",
       "splits": {
         "Neos.Cache": "git@github.com:neos/cache.git",
         "Neos.Error.Messages": "git@github.com:neos/error-messages.git",
@@ -26,7 +26,7 @@
     },
     "Neos": {
       "url": "https://github.com/neos/neos-development-collection",
-      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?|master|main)$/",
+      "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?)$/",
       "splits": {
         "Neos.Diff": "git@github.com:neos/diff.git",
         "Neos.Media": "git@github.com:neos/media.git",
