TASK: Add split setup for new Neos 9.0 packages

--- a/config.json
+++ b/config.json
@@ -6,8 +6,13 @@
       "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?)$/",
       "splits": {
         "Neos.Cache": "git@github.com:neos/cache.git",
+        "Neos.Eel": "git@github.com:neos/eel.git",
         "Neos.Error.Messages": "git@github.com:neos/error-messages.git",
+        "Neos.Flow": "git@github.com:neos/flow.git",
+        "Neos.Flow.Log": "git@github.com:neos/flow-log.git",
         "Neos.FluidAdaptor": "git@github.com:neos/fluidadaptor.git",
+        "Neos.Http.Factories": "git@github.com:neos/http-factories.git",
+        "Neos.Kickstarter": "git@github.com:neos/kickstart.git",
         "Neos.Utility.Arrays": "git@github.com:neos/utility-arrays.git",
         "Neos.Utility.Files": "git@github.com:neos/utility-files.git",
         "Neos.Utility.Lock": "git@github.com:neos/utility-lock.git",
@@ -16,12 +21,7 @@
         "Neos.Utility.OpcodeCache": "git@github.com:neos/utility-opcodecache.git",
         "Neos.Utility.Pdo": "git@github.com:neos/utility-pdo.git",
         "Neos.Utility.Schema": "git@github.com:neos/utility-schema.git",
-        "Neos.Utility.Unicode": "git@github.com:neos/utility-unicode.git",
-        "Neos.Flow.Log": "git@github.com:neos/flow-log.git",
-        "Neos.Http.Factories": "git@github.com:neos/http-factories.git",
-        "Neos.Eel": "git@github.com:neos/eel.git",
-        "Neos.Flow": "git@github.com:neos/flow.git",
-        "Neos.Kickstarter": "git@github.com:neos/kickstart.git"
+        "Neos.Utility.Unicode": "git@github.com:neos/utility-unicode.git"
       }
     },
     "Neos": {
@@ -29,11 +29,24 @@
       "allowedRefsPattern": "/^refs\\/(?:tags|heads)\\/(?:[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:-(?:alpha|beta)(?:[0-9]+))?)$/",
       "splits": {
         "Neos.CliSetup": "git@github.com:neos/cli-setup.git",
+        "Neos.ContentGraph.DoctrineDbalAdapter": "git@github.com:neos/contentgraph-doctrinedbaladapter.git",
+        "Neos.ContentGraph.PostgreSQLAdapter": "git@github.com:neos/contentgraph-postgresqladapter.git",
+        "Neos.ContentRepository": "git@github.com:neos/content-repository.git",
+        "Neos.ContentRepository.Core": "git@github.com:neos/contentrepository-core.git",
+        "Neos.ContentRepository.Export": "git@github.com:neos/contentrepository-export.git",
+        "Neos.ContentRepository.LegacyNodeMigration": "git@github.com:neos/contentrepository-legacynodemigration.git",
+        "Neos.ContentRepository.NodeAccess": "git@github.com:neos/contentrepository-nodeaccess.git",
+        "Neos.ContentRepository.NodeMigration": "git@github.com:neos/contentrepository-nodemigration.git",
+        "Neos.ContentRepository.Security": "git@github.com:neos/contentrepository-security.git",
+        "Neos.ContentRepository.StructureAdjustment": "git@github.com:neos/contentrepository-structureadjustment.git",
+        "Neos.ContentRepositoryRegistry": "git@github.com:neos/contentrepositoryregistry.git",
         "Neos.Diff": "git@github.com:neos/diff.git",
+        "Neos.Fusion": "git@github.com:neos/fusion.git",
+        "Neos.Fusion.Afx": "git@github.com:neos/fusion-afx.git",
         "Neos.Media": "git@github.com:neos/media.git",
         "Neos.Media.Browser": "git@github.com:neos/media-browser.git",
         "Neos.Neos": "git@github.com:neos/neos.git",
-        "Neos.SiteKickstarter": "git@github.com:neos/neos-kickstarter.git",
+        "Neos.Neos.LegacyFusionCompatibility": "git@github.com:neos/neos-legacyfusioncompatibility.git",
         "Neos.NodeTypes": "git@github.com:neos/neos-nodetypes.git",
         "Neos.NodeTypes.AssetList": "git@github.com:neos/nodetypes-assetlist.git",
         "Neos.NodeTypes.BaseMixins": "git@github.com:neos/nodetypes-basemixins.git",
@@ -42,9 +55,7 @@
         "Neos.NodeTypes.Form": "git@github.com:neos/nodetypes-form.git",
         "Neos.NodeTypes.Html": "git@github.com:neos/nodetypes-html.git",
         "Neos.NodeTypes.Navigation": "git@github.com:neos/nodetypes-navigation.git",
-        "Neos.ContentRepository": "git@github.com:neos/content-repository.git",
-        "Neos.Fusion": "git@github.com:neos/fusion.git",
-        "Neos.Fusion.Afx": "git@github.com:neos/fusion-afx.git"
+        "Neos.SiteKickstarter": "git@github.com:neos/neos-kickstarter.git"
       }
     }
   }
